kubernetes/traefik/sm.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-monitor
  namespace: traefik
  labels:
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      name: metrics
      port: 9100
      # targetPort: 5000
